# mobseap_ws

./: .gitignore  start_panda.sh
.depthai_cached_models/60c69f5790ff4be31668533080083e33e4cf5edb/: metadata.yaml
src/lattepanda_bringup/: package.xml  setup.cfg  setup.py
src/lattepanda_bringup/launch/: panda_bringup.launch.py
src/simple_path_planner/: CMakeLists.txt  package.xml
src/simple_path_planner/include/simple_path_planner/: simple_path_planner_node.hpp
src/simple_path_planner/src/: simple_path_planner_node.cpp
src/usv_sim/: package.xml  setup.py
src/usv_sim/launch/: usv_sim.launch.py
src/usv_sim/meshes/: boat_hull.STL
src/usv_sim/urdf/: usv.urdf.xacro
src/usv_sim/usv_sim/: simple_usv_sim_node.py
src/vision/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/vision/src/: target_range_node.cpp  yolo_object_detection.cpp
